[package]
name = "tulisp-proc-macros"
description = "Proc macros for tulisp."
version = "0.4.0"
repository = "https://github.com/shsms/tulisp-proc-macros"
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
